--- a/antimono/seL4-raw/Cargo.toml
+++ b/antimono/seL4-raw/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
-name = "seL4-raw"
+name = "sel4-raw"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bitflags = "2.5.0"
+bitfield = "0.15.0"
