--- a/antimono/sel4-core-raw/Cargo.toml
+++ b/antimono/sel4-core-raw/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 bitflags = "2.5.0"
 bitfield = "0.15.0"
-
+log = "0.4"
 align_ext = { path = "../../asterinas/framework/libs/align_ext" }
 
 [dependencies.aster-frame]
