--- a/antimono/Cargo.toml
+++ b/antimono/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sel4-core-raw = {path = "./sel4-core-raw"}
+sel4-core-raw = { path = "./sel4-core-raw" }
+log = "0.4"
 
 
 [dependencies.aster-frame]
@@ -15,5 +16,5 @@ path = "../asterinas/framework/libs/ktest"
 
 [workspace]
 resolver = "2"
-members = ["am-object","sel4-core-raw", "sel4"]
+members = ["am-object", "sel4-core-raw", "sel4"]
 exclude = ["target/osdk/base"]
