--- a/antimono/sel4-core-raw/Cargo.toml
+++ b/antimono/sel4-core-raw/Cargo.toml
@@ -14,6 +14,5 @@ align_ext = { path = "../../asterinas/framework/libs/align_ext" }
 [dependencies.aster-frame]
 path = "../../asterinas/framework/aster-frame"
 
-[features]
-default = []
-mcs = []
+[dependencies.ktest]
+path = "../../asterinas/framework/libs/ktest"
