--- a/antimono/sel4/Cargo.toml
+++ b/antimono/sel4/Cargo.toml
@@ -6,12 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-downcast-rs = { version = "1.2.0", default-features = false }
 bitflags = "2.5.0"
 bitfield = "0.15.0"
+log = "0.4"
+align_ext = { path = "../../asterinas/framework/libs/align_ext" }
 
 [dependencies.aster-frame]
 path = "../../asterinas/framework/aster-frame"
 
-[dependencies.ktest]
-path = "../../asterinas/framework/libs/ktest"
+[features]
+default = []
+mcs = []
