--- a/antimono/justfile
+++ b/antimono/justfile
@@ -11,7 +11,7 @@ asm-kernel:
   rust-objdump -d target/x86_64-unknown-none/debug/antimono-osdk-bin > asm/kernel.asm
 
 asm-user:
-  objdump -d images/capabilities-image-x86_64-pc99 > asm/user.asm
+  objdump -d images/root_task > asm/user.asm
 
 debug: 
   cargo osdk run --enable-gdb --gdb-server-addr 127.0.0.1:1234
