--- a/antimono/ember/Cargo.toml
+++ b/antimono/ember/Cargo.toml
@@ -20,3 +20,4 @@ spin = "0.9"
 xmas-elf = "0.9"
 lazy_static = { version = "1.0", features = ["spin_no_std"] }
 bitflags = "1.3"
+static_assertions = "1.1.0"
