--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,12 @@
   "files.watcherExclude": {
     "**/target": true
   },
-  "rust-analyzer.cargo.target": "x86_64-unknown-none",
+  "rust-analyzer.check.allTargets": false,
+  "rust-analyzer.check.extraArgs": [
+    "--target",
+    "x86_64-unknown-none",
+    "-Zbuild-std=core,alloc,compiler_builtins",
+    "-Zbuild-std-features=compiler-builtins-mem"
+  ],
+  "rust-analyzer.showUnlinkedFileNotification": false
 }
