--- a/antimono/Cargo.toml
+++ b/antimono/Cargo.toml
@@ -13,26 +13,28 @@ anti-frame = { path = "crates/anti-frame" }
 [workspace]
 resolver = "2"
 members = [
-  "crates/align-ext",
   "crates/anti-frame",
   "crates/anti-main",
   "crates/anti-rights",
   "crates/anti-rights-proc",
+  "crates/align-ext",
+  "crates/anti-util",
   "crates/id-alloc",
   "crates/int-to-c-enum",
   "crates/typeflags",
   "crates/typeflags-util",
-  "crates/sel4-rustfmt-helper",
-  "crates/sel4/bitfield-ops",
-  "crates/sel4/bitfield-parser",
-  "crates/sel4/bitfield-parser/test",
+  # "crates/sel4",
+  # "crates/sel4-rustfmt-helper",
+  # "crates/sel4/bitfield-ops",
+  # "crates/sel4/bitfield-parser",
+  # "crates/sel4/bitfield-parser/test",
   # "crates/sel4/build-env",
-  "crates/sel4/config",
-  "crates/sel4/config/data",
-  "crates/sel4/config/generic",
-  "crates/sel4/config/generic/types",
-  "crates/sel4/config/macros",
-  "crates/sel4/sys",
+  # "crates/sel4/config",
+  # "crates/sel4/config/data",
+  # "crates/sel4/config/generic",
+  # "crates/sel4/config/generic/types",
+  # "crates/sel4/config/macros",
+  # "crates/sel4/sys",
   "ember",
 ]
 exclude = ["target/osdk/base"]
