--- a/antimono/Cargo.toml
+++ b/antimono/Cargo.toml
@@ -7,8 +7,6 @@ edition = "2021"
 ember = { path = "ember" }
 log = "0.4"
 anti-frame = { path = "crates/anti-frame" }
-# [dependencies.aster-frame]
-# path = "../asterinas/framework/aster-frame"
 
 [workspace]
 resolver = "2"
@@ -23,18 +21,18 @@ members = [
   "crates/int-to-c-enum",
   "crates/typeflags",
   "crates/typeflags-util",
-  # "crates/sel4",
-  # "crates/sel4-rustfmt-helper",
-  # "crates/sel4/bitfield-ops",
-  # "crates/sel4/bitfield-parser",
-  # "crates/sel4/bitfield-parser/test",
-  # "crates/sel4/build-env",
-  # "crates/sel4/config",
-  # "crates/sel4/config/data",
-  # "crates/sel4/config/generic",
-  # "crates/sel4/config/generic/types",
-  # "crates/sel4/config/macros",
-  # "crates/sel4/sys",
+   "crates/sel4",
+   "crates/sel4-rustfmt-helper",
+   "crates/sel4/bitfield-ops",
+   "crates/sel4/bitfield-parser",
+   "crates/sel4/bitfield-parser/test",
+   "crates/sel4/build-env",
+   "crates/sel4/config",
+   "crates/sel4/config/data",
+   "crates/sel4/config/generic",
+   "crates/sel4/config/generic/types",
+   "crates/sel4/config/macros",
+   "crates/sel4/sys",
   "ember",
 ]
 exclude = ["target/osdk/base"]
