--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
-  "files.watcherExclude": {
-    "**/target": true
-  },
+  // "files.watcherExclude": {
+  //   "**/target": true
+  // },
   "rust-analyzer.check.allTargets": false,
   "rust-analyzer.check.extraArgs": [
     "--target",
