--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,8 @@
   "rust-analyzer.check.extraArgs": [
     "--target",
     "x86_64-unknown-none",
-    "-Zbuild-std=core,alloc,compiler_builtins",
-    "-Zbuild-std-features=compiler-builtins-mem"
+    // "-Zbuild-std=core,alloc,compiler_builtins",
+    // "-Zbuild-std-features=compiler-builtins-mem"
   ],
   "rust-analyzer.showUnlinkedFileNotification": false
 }
