--- a/antimono/OSDK.toml
+++ b/antimono/OSDK.toml
@@ -3,6 +3,10 @@ project_type = "kernel"
 [boot]
 method = "qemu-direct"
 
+[run.boot]
+initramfs = "images/root_task"
+
+
 [qemu]
 args = """\
     -machine q35,kernel-irqchip=split \
