--- a/antimono/ember/Cargo.toml
+++ b/antimono/ember/Cargo.toml
@@ -13,4 +13,6 @@ sel4 = { path = "../crates/sel4" }
 sel4-bitfield-ops = { path = "../crates/sel4/bitfield-ops" }
 intrusive-collections = "0.9"
 num_enum = { version = "0.7", default-features = false }
+spin = "0.9"
 thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
+xmas-elf = "0.9"
